# fast-grpc

./: .env.example  .gitignore  .pylintrc  .readthedocs.yaml  Makefile  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: integration.yaml
docs/: examples.md  get_started.md  index.md
docs/en/: index.md  reference.md
examples/: advanced_greeter.py  advanced_greeter_client.py  greeter.py  independent_greeter_client.py  middlewares.py  service_from_proto.proto  service_from_proto.py  simple.py
fast_grpc/: __init__.py  app.py  data_processor.py  enums.py  exceptions.py  middleware.py  service.py
fast_grpc/proto/: __init__.py  enums.py  models.py  parse.py  type_mappings.py  utils.py
fast_grpc/proto/templates/: service.proto
tests/: conftest.py  test_service.py
tests/proto/: models.py  test_parse.py  test_utils.py
