[tool.poetry]
name = "py-fast-grpc"
version = "1.0.0"
description = "gRPC simple and easy to use Python framework"
authors = ["Oleg Yurchik"]
license = "MIT License"
readme = "README.md"
packages = [
  { include = "fast_grpc" },
]

[tool.poetry.dependencies]
python = "^3.11"
protobuf = "^6.31.1"
protobuf-to-pydantic = {version = "^0.3.3.1", extras = ["all"]}
grpcio = "^1.59.3"
grpcio-reflection = "^1.59.3"
grpcio-tools = "^1.59.3"
jinja2 = "^3.1.2"
pydantic = {version = "^2.5.2", extras = ["email"]}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
faker = "^20.1.0"
pylint = "^3.1.0"
pylint-quotes = "^0.2.3"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.15"
mkdocstrings = {version = "^0.30.0", extras = ["python"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
