[project]
name = "py-fast-grpc"
version = "1.0.1"
description = "gRPC simple and easy to use Python framework"
authors = [{ name = "Oleg Yurchik" }]
requires-python = "~=3.11.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "protobuf>=6.31.1,<7",
    "protobuf-to-pydantic[all]>=0.3.3.1,<0.4",
    "grpcio>=1.59.3,<2",
    "grpcio-tools>=1.59.3,<2",
    "grpcio-reflection>=1.59.3,<2",
    "jinja2>=3.1.2,<4",
    "pydantic[email]>=2.5.2,<3",
    "grpc-interceptor>=0.15.4,<0.16",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3,<8",
    "faker>=20.1.0,<21",
    "pylint>=3.1.0,<4",
    "pylint-quotes>=0.2.3,<0.3",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.15,<10",
    "mkdocstrings[python]>=0.30.0,<0.31",
]

[tool.uv]
default-groups = []

[tool.hatch.build.targets.sdist]
include = ["fast_grpc"]

[tool.hatch.build.targets.wheel]
include = ["fast_grpc"]

[build-system]
requires = ["hatchling"]

build-backend = "hatchling.build"